fix: carousel center on mobile

--- a/assets/scss/page/_delivery.scss
+++ b/assets/scss/page/_delivery.scss
@@ -1298,6 +1298,6 @@
 .slick-current.slick-active {
     @include respond(414px) {
         // margin: 0 40px 0 60px !important;
-        width: calc(100vw - 164px) !important;
+        width: calc(100vw - 134px) !important;
     }
 }
